syntax = "proto3";
package ecc_proto;

service EccRpc {
  rpc Set (SetRequest) returns (SetReply);
  rpc Get (GetRequest) returns (GetReply);
  rpc GetKeys (GetKeysRequest) returns (GetKeysReply);
}

message SetRequest {
  string key = 1;
  string value = 2;
}
message SetReply {
  string status = 1;
}

message GetRequest {
  string key = 1;
}
message GetReply {
  optional string value = 1;
}

message GetKeysRequest {
}
message GetKeysReply {
  string keys = 1;
}