syntax = "proto3";
package ecc_client;

service RaftRpc {
  rpc Set (SetRequest) returns (SetReply);
  rpc Get (GetRequest) returns (GetReply);
}

message SetRequest {
  string key = 1;
  string value = 2;
}
message SetReply {
  string status = 1;
}

message GetRequest {
  string key = 1;
}
message GetReply {
  string value = 1;
}